--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,8 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-dictabase = "==4.0.8"
+dictabase = "==4.0.9"
+twine = "*"
 
 [requires]
 python_version = "3.8"
