--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,8 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-dictabase = "==4.0.9"
 twine = "*"
+dictabase = "*"
 
 [requires]
 python_version = "3.8"
