replaced custom login feature with well-known flask-login

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ twine = "*"
 dictabase = "*"
 pytest = "*"
 flask-apscheduler = "*"
+flask-login = "*"
+flask-sqlalchemy = "*"
 
 [requires]
 python_version = "3.8"
